<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songs"
        android:textColor="#ffffff"
        android:background="#48C9B0"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:padding="40dp"
        android:id="@+id/songs" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/albums"
        android:textColor="#ffffff"
        android:background="#85C1E9 "
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:padding="40dp"
        android:id="@+id/albums" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlists"
        android:textColor="#ffffff"
        android:background="#48C9B0"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:padding="40dp"
        android:id="@+id/playlists" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recently_played"
        android:textColor="#ffffff"
        android:background="#85C1E9 "
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:padding="40dp"
        android:id="@+id/played" />
</LinearLayout>